styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;

  /* COLORS */
  --background: #fff0d5;
  --card-background: #ffe3af;
  --yellow: #ffa600;

  --accent: #f506ff;
  --text-color: #231d24;
  --text-color-light: #585851;

  /* FONT WEIGHTS */
  --text-regular: 500;
  --text-bold: 700;

  /* LETTER SPACING */
  --spacing-normal: 1em;
  --spacing-eyebrow: 0.1em;
}

html {
  scroll-behavior: smooth;
  color-scheme: light;
}

body {
  background-color: var(--background);
  font-family: "Sofia Sans", sans-serif;
  font-weight: var(--text-regular);
}

a {
  text-decoration: none;
  color: inherit;
}

.parallax {
  display: grid;
  grid-template-areas: "stack";
  position: relative;
  z-index: 0;
  contain: paint;
  background-image: linear-gradient(var(--background), white);
}

.parallax > * {
  contain: full;
  grid-area: stack;
  animation: parallax linear;
  animation-timeline: scroll();
}

.parallax > img {
  width: 100%;
}

.parallax__01 {
  z-index: 4;
  --parallax-speed: 0.5;
}

.parallax__02 {
  z-index: 3;
  --rotation-angle: -10deg;
  --parallax-speed: 10;
}

.parallax__03 {
  z-index: 2;
  rotate: -5deg;
  --parallax-speed: 20;
  --rotation-angle: 10deg;
}

.parallax__04 {
  z-index: 1;
  --parallax-speed: 30;
}

@keyframes parallax {
  to {
    transform: translateY(calc(var(--parallax-speed) * 20px));
    rotate: var(--rotation-angle);
  }
}

h1,
h2,
h3 {
  font-family: "Syncopate", sans-serif;
  font-weight: 700;
}

h1 {
  text-transform: uppercase;
  font-size: clamp(2rem, 5rem, 6rem);
  max-width: 8ch;
  text-align: center;
  line-height: 80%;
  margin-bottom: 0.2em;
}

h2 {
  text-transform: uppercase;
  font-size: 3rem;
}

h3 {
  font-size: 1.5rem;
  padding-block: 0.5rem;
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

section > div {
  width: 75vw;
}

.resume {
  background-image: linear-gradient(var(--yellow), var(--background));
}

.introduction {
  display: flex;
  flex-direction: column;
  padding-block: 6em;
  justify-content: center;
  align-items: center;
  gap: 1.5em;
}

.about {
  text-align: center;
  max-width: 45ch;
}

.socials {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

.socials li {
  background-color: var(--accent);
  padding: 0.5em 3em;
  border-radius: 10px;
  color: white;
}

.topics {
  display: flex;
  flex-direction: column;
  padding-block: 3em;
  justify-content: center;
  align-items: flex-start;
  gap: 1.5em;
}

.eyebrow {
  color: var(--accent);
  text-transform: uppercase;
  font-weight: var(--text-bold);
  letter-spacing: var(--spacing-eyebrow);
  font-size: 1.2rem;
  margin-bottom: 0.3rem;
}

.experience {
  display: grid;
  grid-auto-flow: column;
  width: 100%;
  gap: 1rem;
  overflow-x: auto;
  padding-bottom: 1.5rem;
  justify-content: start;
}

.experience::-webkit-scrollbar {
  height: 0.75rem;
}

.experience::-webkit-scrollbar-track {
  background-color: var(--card-background);
  border-radius: 100vw;
}

.experience::-webkit-scrollbar-thumb {
  background-color: var(--yellow);
  border-radius: 100vw;
}

.experience-card {
  width: 34rem;
  padding: 2rem;
  border-radius: 20px;
  background-color: var(--card-background);
  border: 1px solid var(--yellow);
}

.date {
  color: var(--accent);
  padding: 0.2rem 1rem;
  text-transform: uppercase;
  font-style: italic;
  font-size: 0.9rem;
  letter-spacing: var(--spacing-eyebrow);
}

.company {
  padding-bottom: 1rem;
  text-transform: uppercase;
  letter-spacing: var(--spacing-eyebrow);
}

.task {
  list-style: none;
  padding-left: 1rem;
  border-left: 3px solid var(--yellow);
  color: var(--text-color-light);
}

.task li {
  margin-bottom: 0.4rem;
}

.details {
  max-width: 72ch;
}

.skills-list {
  text-transform: uppercase;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  max-width: 50vw;
}

.skills-list li {
  background-color: var(--yellow);
  padding: 0.5rem 2rem;
  border-radius: 0.5rem;
}

